# garmin-performance-analysis

./: .env.example  .envrc  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PROCESS.md  INVESTIGATION.md  LICENSE  README.md  SECURITY.md  migration_log.txt  phase4_performance_summary.txt  pyproject.toml
.claude/: settings.json
.claude/agents/: completion-reporter.md  data-analyst.md  developer.md  efficiency-section-analyst.md  environment-section-analyst.md  phase-section-analyst.md  project-planner.md  proofreader.md  report-generator.md  split-section-analyst.md  summary-section-analyst.md  tdd-implementer.md  unified-section-analyst.md  validation-agent.md
.claude/commands/: analyze-activity.md  batch-analyze.md  checkpoint.md  decompose.md  implement.md  plan-training.md  progress-report.md  project-status.md  resume.md  set-goal.md  ship.md  weekly-review.md
.claude/hooks/: block-commit-on-main.sh  check-banned-patterns.sh  format-python.sh  guard-data-deletion.sh  guard-no-verify.sh  guard-push.sh  no-direct-duckdb-connect.sh  readonly-auto-approve.sh
.claude/rules/: analysis-agents.md  architecture-preferences.md  bash-alias-safety.md  bash-style.md  code-quality.md  duckdb-safety.md  e2e-verification.md  evaluation-principles.md  explore-agent-serena.md  git-workflow.md  intent-disambiguation.md  issue-sync.md  mcp-data-access.md  pr-review.md  prohibited-practices.md  project-workflow.md  real-data-validation.md  testing.md  training-plan-rules.md  workflow-orchestration.md
.claude/tasks/: lessons.md  todo.md
.claude/workflows/: analyze-activity.js  implement-tier.js  trend-narration.js
.github/: CODEOWNERS
.github/workflows/: ci.yml
analysis/: .env.example  .mcp.json  CLAUDE.md
analysis/.claude/: agents  rules
docker/: Dockerfile  README.md  entrypoint.sh  init-firewall.sh  run.sh
docs/: GITHUB_PUBLISHING_CHECKLIST.md  LLM_BEHAVIOR_RULES.md  architecture.md  data-analysis-guide.md  garmin-web.md  getting-started.md  mcp-tools-reference.md  report-balance-analysis.md  scheduled-sync.md  testing_guidelines.md  training-type-evaluation-criteria.md
docs/archive/: AGENT_WORKFLOW.md
docs/completion_reports/: .gitkeep
docs/examples/: 01_interval_analysis.ipynb  README.md
docs/migrations/: remove_fk_constraints.md
docs/project/: .gitkeep  data-analyst-agent-plan.md
docs/spec/: duckdb_schema_mapping.md  report_specification.md
docs/templates/: completion_report.md  planning.md
scripts/: check-claude-scripts.sh  check-workflow-agent-model.mjs  ci-check.sh  cleanup-merged-worktrees.sh  prune-merged-branches.sh  start-analysis-server.sh  start-mcp-server.sh
scripts/tests/: test-ci-check-flags.sh  test-cleanup-merged-worktrees.sh
servers/: garmin_db_server.py  json_server.py  markdown_server.py  report_generator_core.py
tests/: conftest.py  test_display_settings.py  test_error_handling.py  test_output_interceptor.py
tests/database/: test_aggregate_integrated.py  test_aggregate_power.py  test_database_paths.py  test_db_reader.py  test_db_reader_normalized.py  test_db_reader_split_time_ranges.py  test_db_reader_statistics.py  test_db_reader_time_series.py  test_db_writer_schema.py  test_deprecation_warnings.py  test_phase0_prep.py  test_phase1_schema.py  test_phase2_schema.py
tests/form_baseline/: test_evaluator.py  test_evaluator_integrated.py  test_evaluator_power.py  test_integrated_score.py  test_power_efficiency_model.py  test_predictor.py  test_scorer.py  test_text_generator.py  test_trainer.py  test_trainer_power.py  test_training_mode.py  test_trend_analyzer.py  test_utils.py
tests/ingest/: __init__.py  test_backward_compatibility.py  test_body_composition.py  test_garmin_worker.py  test_garmin_worker_paths.py  test_garmin_worker_time_series.py
tests/integration/: test_agent_phase0_compatibility.py  test_cadence_migration.py  test_garmin_worker_duckdb_integration.py  test_phase_analyst_training_type_integration.py  test_process_activity_integration.py  test_rag_interval_tools_mcp.py  test_raw_data_extractor_integration.py  test_regenerate_duckdb_integration.py  test_remove_fk_migration_integration.py
tests/mcp/: test_export.py  test_histogram.py  test_materialize.py  test_phase1_integration.py  test_profile.py
tests/performance/: test_phase_analyst_performance.py  test_token_reduction.py
tests/planner/: test_workflow_planner.py
tests/rag/: __init__.py
tests/reporting/: test_mermaid_graph_integration.py  test_report_generation_integration.py  test_report_generator_paths.py  test_report_generator_worker.py  test_splits_loading.py
tests/scripts/: __init__.py  test_migrate_time_series.py
tests/tools/: test_bulk_fetch_activity_details.py
tests/unit/: test_garmin_worker_duckdb_cache.py  test_garmin_worker_phase0.py  test_garmin_worker_phase4.py  test_garmin_worker_table_filtering.py  test_garmin_worker_weight_migration.py  test_hr_efficiency_inserter.py  test_hr_zone_percentage.py  test_migrate_raw_data.py  test_phase_section_analyst_training_type.py  test_raw_data_extractor.py  test_regenerate_duckdb.py  test_remove_fk_migration.py  test_weight_data_migrator.py
tests/utils/: test_llm_safe_data.py  test_paths.py
tools/: README_weight_migration.md  __init__.py  bulk_fetch_activity_details.py  migrate_raw_data_structure.py  migrate_weight_data.py
tools/batch/: weight_data_migrator.py
tools/benchmarks/: benchmark_export_performance.py
tools/database/: db_reader.py  db_writer.py
tools/form_baseline/: evaluator.py  integrated_score.py  power_efficiency_model.py  predictor.py  scorer.py  text_generator.py  trainer.py  training_mode.py  trend_analyzer.py
tools/ingest/: garmin_worker.py
tools/mcp_server/: export_manager.py  view_manager.py
tools/planner/: workflow_planner.py
tools/reporting/: report_generator_worker.py  report_template_renderer.py
tools/scripts/: backfill_baseline_history.py  batch_generate_reports.py  batch_ingest.py  benchmark_regenerate.py  bulk_fetch_activity_details.py  bulk_fetch_raw_data.py  create_project_issues.py  (+12 more)
(+226 files in other folders)
