[project]
name = "garmin-performance-analysis"
version = "0.1.0"
description = "Garmin running performance analysis workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "garmin-mcp-server",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.5.0",
    "black>=26.0.0",
    "ruff>=0.15.0",
    "mypy>=1.11.0",
    "pre-commit>=4.0.0",
]

[tool.uv.sources]
garmin-mcp-server = { workspace = true }

[tool.uv.workspace]
members = ["packages/garmin-mcp-server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.wheel]
packages = ["packages/garmin-mcp-server/src/garmin_mcp"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = [
    "E501",
    "E402",
    "SIM105",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["packages/garmin-mcp-server/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (moderate speed)",
    "performance: Performance benchmark tests",
    "slow: Slow tests (deselected by default)",
    "garmin_api: Tests that require Garmin API authentication (rate limited)",
]
addopts = """
    -m 'not garmin_api and not slow and not performance'
    --strict-markers
    --tb=short
    --disable-warnings
    -n 4
    --maxfail=5
    --durations=10
"""
cache_dir = ".pytest_cache"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["packages/garmin-mcp-server/src/garmin_mcp"]
omit = ["*/tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
